syntax = "proto3";
package penumbra.thin_wallet;

import "crypto.proto";
import "chain.proto";
import "stake.proto";

// A thin wallet service.
//
// Unlike the "light wallet" service, this protocol does not attempt to be
// trust-minimized, either in terms of integrity or privacy.
service ThinWallet {
  rpc TransactionByNote(crypto.NoteCommitment) returns (chain.NoteSource);
  rpc ValidatorStatus(ValidatorStatusRequest) returns (stake.ValidatorStatus);
  rpc NextValidatorRate(stake.IdentityKey) returns (stake.RateData);
}

message ValidatorStatusRequest {
  // The expected chain id (empty string if no expectation).
  string chain_id = 1;
  stake.IdentityKey identity_key = 2;
}
